--- a/src/components/types/grid.css
+++ b/src/components/types/grid.css
@@ -1,6 +1,6 @@
 :root {
   --node-gird--count: 12;
-  --node-grid-column--count: 1;
+  --node-grid-item--column-span: 1;
 }
 
 .node-grid {
@@ -9,6 +9,6 @@
   grid-column-gap: var(--grid--grid-column-gap, 1.5rem);
 }
 
-.node-grid-column {
-  grid-column: span var(--node-grid-column--count);
+.node-grid-item {
+  grid-column: span var(--node-grid-item--column-span);
 }
